# 42-PythonModules

./: README.md
PythonModule00/code/ex0/: ft_hello_garden.py
PythonModule00/code/ex1/: ft_plot_area.py
PythonModule00/code/ex2/: ft_harvest_total.py
PythonModule00/code/ex3/: ft_plant_age.py
PythonModule00/code/ex4/: ft_water_reminder.py
PythonModule01/: run_tests.sh
PythonModule01/expected_output/: ex0_eo.txt  ex1_eo.txt  ex2_eo.txt  ex4_eo.txt  ex5_eo.txt  ex6_eo.txt
PythonModule02/: run_tests.sh
PythonModule02/expected_output/: ex0_eo.txt  ex1_eo.txt  ex2_eo.txt  ex3_eo.txt  ex4_eo.txt
PythonModule03/: run_tests.sh  temp_actual_output.txt  temp_expected_output.txt
PythonModule03/expected_output/: ex0_eo.txt  ex1_eo.txt  ex2_eo.txt  ex3_eo.txt  ex4_eo.txt  ex5_eo.txt  ex6_eo.txt
PythonModule04/: run_tests.sh
PythonModule04/expected_output/: ex0_eo.txt  ex1_eo.txt
PythonModule06/: codebase_summary.txt  filecreator.py  filestructure.txt  onefilemaker.py  p1
PythonModule06/code/: elements.py  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
PythonModule07/: SUB.MD  onefilemaker.py
PythonModule07/code/: battle.py  capacitor.py  tournament.py
PythonModule08/: notes.md  onefilemaker.py  sub.md
PythonModule08/code/ex1/: loading.py  pyproject.toml  requirements.txt
PythonModule09/: onefilemaker.py
PythonModule10/: notes.md
(+94 files in other folders)
