[tool.poetry]
name = "matrix-loading"
version = "1.0.0"
description = "Matrix data analysis project for Exercise 1"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"